Removed "enable-preview" for Java 13