@@ -117,9 +117,6 @@
                 <configuration>
                     <source>13</source>
                     <target>13</target>
-                    <compilerArgs>
-                        --enable-preview
-                    </compilerArgs>
                     <showDeprecation>true</showDeprecation>
                     <showWarnings>true</showWarnings>
                 </configuration>
